--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,10 +1,15 @@
+<section>
+  {{#if comment.length}}
 {{#each comments as |comment| }}
 <div class="row align-center mb-5">
+
+
+
   <div class="col-md-6">
     <h2>{{{}}} {{comment.name}}</h2>
-  </div>
-  <div class="col-md-6">
-    <h3><a href="mailto:{{user.email}}">{{user.email}}</a></h3>
-  </div>
-</div>
+        </div>
+
 {{/each}}
+    </div>
+{{/if}}
+</section>
