--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -13,8 +13,9 @@
     <button class="btn btn-primary" type="submit">Signup</button>
   </div>
   <div>
-    <button class="btn btn-primary" type="submit">Login instead</button>
-  </div>
 </form>
+    <button class="btn btn-primary" type="button">Login instead</button>
+  </div>
+
 
 <script src="/js/login.js"></script>
