--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,9 +12,9 @@
   <div class="form-group">
     <button class="btn btn-primary" type="submit">login</button>
   </div>
-  <div>
-    <button class="btn btn-primary" type="submit">Signup</button>
-  </div>
 </form>
+  <div>
+    <button class="btn btn-primary" type="button">Signup</button>
+  </div>
 
 <script src="/js/login.js"></script>
